--- a/static/glenn.html
+++ b/static/glenn.html
@@ -35,6 +35,7 @@
                     has a long history in customer service which he has channeled into designing usable interfaces as well as running his own tutoring business.</p><br>
                     <a href="http://www.gqhtutoring.com/home.html"><button type="button" class="btn bg-purple-pink">Visit Glenn's Math/Computer Science Tutoring Site</button></a>
                     <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Glenn and Lyman's Checkers Game</button></a>
+                    <a href="http://www.hurd-sullivan.com/glenngithub.html"><button type="button" class="btn bg-purple-pink">Github code links</button></a>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/glenn.jpg"/>
