--- a/static/index.html
+++ b/static/index.html
@@ -28,39 +28,21 @@
         </div> <!-- .jumbotron -->
 
         <!-- Container (About Section) -->
-        <div id="lyman" class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4">
-                    <img src="images/Lyman.jpg" alt="Picture of Lyman"/>
-                </div>
-                <div class="col-sm-8">
-                    <h2>Lyman "A God Living Amongst Mankind" Hurd</h2><br>
-                    <h4>Lyman regularly moves mountains and shifts the ocean's tides</h4><br>
-                    <p>Thank you to my fans.  A professional software developer,
-                    believe it or not this is what I do on weekends for fun.  In
-                    my colleagues' view, for good reasons, I am kept safely away
-                    from the front end, so this is my forum to explore all the
-                    things I wish I knew more about.  This is combined with a
-                    passion for games and puzzles, e.g., my collaboration with Glenn on a Checkers AI.</p>
-                    <a href="notakto/index.html"><button type="button" class="btn bg-purple-pink">Lyman's Implementation of the Game - NoTakTo</button></a>
-                    <a href="grundy.html"><button type="button" class="btn bg-purple-pink">Grundy's Game</button></a>
-                </div>
-            </div>
-        </div>
-
         <div id="glenn" class="container-fluid">
             <div class="row">
                 <div class="col-sm-8">
                     <h2>Glenn "I want to learn the ways of the force like my father" Hurd</h2><br>
                     <h4>Seeker after truth...</h4><br>
-                    <p>Having completed his CS (and math) degree at Georgia State, Glenn is
-                    striving to expand his horizons by picking up new languages,
-                    new techniques and new challenges.  Happily he has inherited
-                    his father's love of games and puzzles which has led to
-                    numerous collaborations for the shear joy of it.</p><p>Glenn
-                    has a long history in customer service which he has channeled into designing usable interfaces as well as running his own tutoring business.</p><br>
-                    <a href="http://www.gqhtutoring.com/home.html"><button type="button" class="btn bg-purple-pink">Visit Glenn's Math/Computer Science Tutoring Site</button></a>
-                    <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Glenn and Lyman's Checkers Game</button></a>
+                    <p>Glenn enjoys creating simple and robust user interfaces with Python & Javascript and has a passion for artificial intelligence.
+		      This site represents a show-case for projects to expand horizons and generally have fun doing so.
+                      </p>
+		    <br/>
+                    <a href="https://www.linkedin.com/in/glenn-hurd-41032118/"><button type="button" class="btn bg-purple-pink">Glenn's LinkedIn Profile</button></a>
+
+                    <!--<a href="http://www.gqhtutoring.com/home.html"><button type="button" class="btn bg-purple-pink">Glenn's Math/Computer Science Tutoring Site</button></a>
+                    <a href="http://glennqhurd.pythonanywhere.com"><button type="button" class="btn bg-purple-pink">Glenn and Lyman's Checkers Game</button></a>-->
+                    <a href="http://www.hurd-sullivan.com/glenngithub.html"><button type="button" class="btn bg-purple-pink">Glenn's Projects</button></a>
+                    <a href="mailto:glenn@hurd-sullivan.com"><button type="button" class="btn bg-purple-pink">Contact Glenn</button></a>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/glenn.jpg" alt="Picture of Glenn"/>
@@ -77,10 +59,12 @@
                     <h2>Rebecca "But it says 'Fun for <i>all</i> ages' " Sullivan</h2><br>
                     <h4>I'm really a dancer in disguise...</h4><br>
                     <p>Having danced in the preprofessional division of the Atlanta Ballet, and heading to college three years early,
-                    Becca went from degrees in Oboe performace and Dalcroze Eurhythmics, she then went on to complet eher MBA in Marketing.  In case anyone
+                    Becca earned Bachelor's degrees in Oboe performace and Dalcroze Eurhythmics.  She then went on to complete her MBA in Marketing.  In case anyone
                     doubted that she could do anything, she finally decided that her father, brother and husband shouldn't have all the fun
                     and has embarked on an adventure in software development.</p><br>
-                    <a href="http://rebecca-sullivan.com"><button type="button" class="btn bg-purple-pink">Visit Rebecca's Personal Site</button></a><br>
+                    <a href="https://www.linkedin.com/in/rhhsullivan/"><button type="button" class="btn bg-purple-pink">Rebecca's LinkedIn Profile</button></a>
+                    <a href="http://rebecca-sullivan.com"><button type="button" class="btn bg-purple-pink">Rebecca's Personal Site</button></a><br>
+                    <a href="mailto:rebecca@hurd-sullivan.com"><button type="button" class="btn bg-purple-pink">Contact Rebecca</button></a>
                 </div>
             </div>
         </div>
@@ -93,10 +77,32 @@
                     <p>After finishing his PhD, Drew looked up an eagerly
                     inquired "What's next?"  After finding out that they stopped making degrees, he is trying to climb a new mountain and is showing that the
                     conventional wisdom that musicians can do anything is more than urban legend.</p><br/>
-                    <a href="http://drew-sullivan-dma.com"><button type="button" class="btn bg-purple-pink">Visit Drew's Personal Site</button></a><br>
+                    <a href="https://www.linkedin.com/in/drew-sullivan/"><button type="button" class="btn bg-purple-pink">Drew's LinkedIn Profile</button></a>
+                    <a href="http://drew-sullivan-dma.com"><button type="button" class="btn bg-purple-pink">Drew's Personal Site</button></a><br>
+                    <a href="mailto:drew@hurd-sullivan.com"><button type="button" class="btn bg-purple-pink">Contact Drew</button></a>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/Drew.jpg" alt="Picture of Drew"/>
+                </div>
+            </div>
+        </div>
+
+        <div id="lyman" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="images/Lyman.jpg" alt="Picture of Lyman"/>
+                </div>
+                <div class="col-sm-8">
+                    <h2>Lyman "Paterfamilias" Hurd</h2><br>
+                    <h4>Lyman is the spiritual leader of our clique of programmers.</h4><br>
+                    <p>Unlike those I pretend to advise, I am a self-taught programmer as I am a mathematician by education.
+                    A software developer as my day job, believe it or not this is what I do on weekends for fun.  In
+                    my colleagues' view, for good reasons, I am kept safely away
+                    from the front end, so this is my forum to explore techniques I wish I knew more about.  This is combined with a
+                    passion for games and puzzles, e.g., my collaboration with Glenn on a Checkers AI.</p>
+                    <a href="https://www.linkedin.com/in/lymanhurd"><button type="button" class="btn bg-purple-pink">Lyman's LinkedIn Profile</button></a>
+                    <a href="lyman-projects.html"><button type="button" class="btn bg-purple-pink">Lyman's Projects</button></a><br>
+                    <a href="mailto:lyman@hurd-sullivan.com"><button type="button" class="btn bg-purple-pink">Contact Lyman</button></a>
                 </div>
             </div>
         </div>
