--- a/static/header.html
+++ b/static/header.html
@@ -10,11 +10,11 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#glenn">GLENN</a></li>
-                <li><a href="#rebecca">REBECCA</a></li>
-                <li><a href="#drew">DREW</a></li>
-                <li><a href="#lyman">LYMAN</a></li>
-                <li><a href="/contact.html">CONTACT</a></li>
+                <li><a href="/index.html#glenn">GLENN</a></li>
+                <li><a href="/index.html#rebecca">REBECCA</a></li>
+                <li><a href="/index.html#drew">DREW</a></li>
+                <li><a href="/index.html#lyman">LYMAN</a></li>
+                <!--<li><a href="/contact.html">CONTACT</a></li>-->
             </ul>
         </div>
     </div>
