--- a/notakto/static/index.html
+++ b/notakto/static/index.html
@@ -40,8 +40,8 @@
   <p class="rules">
     <ul>
       <li>Red and Blue take turns playing X's.</li>
-      <li>A board with three in a row is dead.</li>
-      <li>Whoever kills the last board, loses.</li>
+      <li>A board with three X's in a row (irrespective of color) is dead.</li>
+      <li>Whoever kills the last board loses.</li>
       <li><a href="discussion.html">More discussion.</a></li>
     </ul>
   </p>
