Added cribbage web service.

--- a/static/glenngithub.html
+++ b/static/glenngithub.html
@@ -22,6 +22,64 @@
     <body id="homepage" data-spy="scroll" data-target=".navbar" data-offset="60">
         <div id="header"></div> <!-- import for header.html -->
         <!-- Container (About Section) -->
+        <!--
+
+            <div class="col-md-2">
+              <p>Simon App</p>
+              <a href="https://codepen.io/glennqhurd/full/EQqxKe/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/SimonScreenshot.PNG"></img>
+              </a>
+            </div>
+            <div class="col-md-2">
+              <p>Calculator App</p>
+              <a href="https://codepen.io/glennqhurd/full/KQKxrN/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/CalculatorScreenshot.PNG"></img>
+              </a>
+            </div>
+            <div class="col-md-2">
+              <p>Pomodoro Clock App</p>
+              <a href="https://codepen.io/glennqhurd/full/xYYQvP/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/PomodoroClockScreenshot.PNG"></img>
+              </a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+              <p>FCCamp Tic Tac Toe App</p>
+              <a href="https://codepen.io/glennqhurd/full/YejPYY/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/TicTacToeScreenshot.PNG"></img>
+              </a>
+            </div>
+            <div class="col-md-2">
+              <p>Wikipedia Router App</p>
+              <a href="https://codepen.io/glennqhurd/full/oomXmq/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/WikipediaRouterScreenshot.PNG"></img>
+              </a>
+            </div>
+            <div class="col-md-2">
+              <p>FCCamp Twitch TV App</p>
+              <a href="https://codepen.io/glennqhurd/full/XVbyxE/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/TwitchTVScreenshot.PNG"></img>
+              </a>
+            </div>
+            <div class="col-md-2">
+              <p>Quote Generator App</p>
+              <a href="https://codepen.io/glennqhurd/full/xPXgxM/">
+                <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/QuoteAssignmentScreenshot.PNG"></img>
+              </a>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <p>FCCamp Weather App</p>
+                <a href="https://codepen.io/glennqhurd/full/VrQgMz/">
+                  <img class="thumbnail" src="http://www.hurd-sullivan.com/glenn/WeatherAppScreenshot.PNG"></img>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>-->
+
         <div id="glenn" class="container-fluid">
             <div class="row">
                 <div class="col-sm-8">
@@ -51,6 +109,7 @@
                     or both at the same time.</p>
                     <a href="https://github.com/glennqhurd/lilyscheckers"><button type="button" class="btn bg-purple-pink">Link to a Javascript Checkers game</button></a>
                     <p></p><br>
+                    <p></p>
                 </div>
                 <div class="col-sm-4">
                     <img src="images/glenn.jpg"/>
